# wg-panel

./: .env.example  .gitattributes  .gitignore  README.md  app.py  pyproject.toml
nginx/: wg-panel-limits.conf  wg-panel.conf
scripts/: add-client.sh  remove-client.sh
src/wg_panel/: auth.py  client_context.py  core.py  middleware.py  traffic.py  wireguard.py
src/wg_panel/routes/: auth.py
systemd/: wg-panel.service
tests/: test_client_context.py
wg_panel/: __init__.py  core.py  i18n.py  runner.py  telegram.py  ui.py
wg_panel/routes/: __init__.py  admin.py  auth.py  devices.py  telegram.py
wireguard/: list-clients.sh
